--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="styles/style.css">  
   <title>Farhad's 16:8 Meal & Workout Planner</title>
 </head>
 <body>
   <header>
     <h1>Farhad's 16:8 Meal & Workout Planner</h1>
-    <p>Feeding: 10:00 AM - 6:00 PM | Fasting: 6:00 PM - 10:00 AM</p>
+    <p>Feeding Window: 10:00 AM – 6:00 PM | Fasting: 6:00 PM – 10:00 AM</p>
   </header>
   <nav>
     <button class="tab-btn active" data-target="day1">Monday</button>
@@ -22,20 +22,26 @@
   </nav>
   <div class="container">
 
+    <!-- Day 1 -->
     <div id="day1" class="tab-content active">
-      <h2>Day 1 - Monday (Workout at 2:30 PM)</h2>
+      <h2>Day 1 – Monday (Workout @ 2:30 PM)</h2>
       <div class="section">
-        <h3>10:00 AM - Meal 1</h3>
+        <h3>10:00 AM – Hearty Breakfast</h3>
         <ul>
-          <li>Grilled chicken breast (5 oz) <label><input type="checkbox" /></label></li>
-          <li>Arugula salad + 1 tsp EVOO</li>
-          <li>1/2 cup cooked quinoa</li>
-          <li>1/4 avocado</li>
+          <li>2 boiled eggs + sautéed spinach + ½ avocado</li>
+          <li>Oats (½ cup) + whey (1 scoop) + cinnamon + almond milk</li>
           <li>Kirkland multivitamin + D3</li>
         </ul>
       </div>
       <div class="section">
-        <h3>2:30 PM - Workout</h3>
+        <h3>1:00 PM – Lunch</h3>
+        <ul>
+          <li>Grilled chicken breast (5 oz) + arugula salad + 1 tsp EVOO</li>
+          <li>½ cup cooked quinoa</li>
+        </ul>
+      </div>
+      <div class="section">
+        <h3>2:30 PM – Workout (Full Body Push)</h3>
         <ul>
           <li>Incline dumbbell press</li>
           <li>Push-ups</li>
@@ -43,64 +49,77 @@
           <li>Cable row</li>
           <li>Goblet squat</li>
           <li>Hanging knee raises</li>
-          <li>Sled push (3 x 20s)</li>
+          <li>Sled push (3×20s)</li>
         </ul>
       </div>
       <div class="section">
-        <h3>3:30 PM - Post-Workout</h3>
+        <h3>3:30 PM – Post-Workout Snack</h3>
         <ul>
-          <li>Oats (1/2 cup) + whey (1 scoop) + 1 tbsp almond butter + almond milk</li>
-          <li>Optional: 1/2 banana</li>
+          <li>Premier Protein shake (325 mL) or oats + whey + ½ banana</li>
         </ul>
       </div>
       <div class="section">
-        <h3>5:30 PM - Dinner & Supplements</h3>
+        <h3>5:30 PM – Dinner & Supplements</h3>
         <ul>
-          <li>Baked salmon (5 oz) + sautéed kale + roasted carrots (1 cup)</li>
+          <li>Baked salmon (5 oz) + sautéed kale + roasted carrots</li>
           <li>Orange Naturals Zinc + Vit C</li>
           <li>Cal/Mag/D3 (alternate days)</li>
         </ul>
       </div>
     </div>
 
+    <!-- Day 2 -->
     <div id="day2" class="tab-content">
-      <h2>Day 2 - Tuesday (Active Recovery at 2:30 PM)</h2>
+      <h2>Day 2 – Tuesday (Active Recovery @ 2:30 PM)</h2>
       <div class="section">
-        <h3>10:00 AM - Meal 1</h3>
+        <h3>10:00 AM – Hearty Breakfast</h3>
         <ul>
-          <li>Lean beef stir fry (5 oz) + peppers + bok choy + EVOO</li>
-          <li>Kirkland multivitamin + D3</li>
+          <li>Greek yogurt (½ cup) + berries + flaxseed</li>
+          <li>Oats (½ cup) + whey (1 scoop) + almond butter</li>
         </ul>
       </div>
       <div class="section">
-        <h3>2:30 PM - Activity</h3>
-        <ul><li>20-30 min brisk walk + mobility</li></ul>
+        <h3>1:00 PM – Lunch</h3>
+        <ul>
+          <li>Extra-lean ground beef stir-fry (5 oz) + bell peppers + bok choy + EVOO</li>
+        </ul>
       </div>
       <div class="section">
-        <h3>3:30 PM - Snack</h3>
+        <h3>2:30 PM – Activity</h3>
+        <ul><li>20–30 min brisk walk + mobility flow</li></ul>
+      </div>
+      <div class="section">
+        <h3>3:30 PM – Snack</h3>
         <ul><li>Greek oats (oats + goat yogurt + whey + flaxseed)</li></ul>
       </div>
       <div class="section">
-        <h3>5:30 PM - Dinner & Supplements</h3>
+        <h3>5:30 PM – Dinner & Supplements</h3>
         <ul>
-          <li>Lentil soup (1 cup) + Brussels sprouts + 1 boiled egg</li>
+          <li>Lentil soup + Brussels sprouts + boiled egg</li>
           <li>Orange Naturals Zinc + Vit C</li>
           <li>Cal/Mag/D3 (alternate days)</li>
         </ul>
       </div>
     </div>
 
+    <!-- Day 3 -->
     <div id="day3" class="tab-content">
-      <h2>Day 3 - Wednesday (Pull Focus at 2:30 PM)</h2>
+      <h2>Day 3 – Wednesday (Pull Focus @ 2:30 PM)</h2>
       <div class="section">
-        <h3>10:00 AM - Meal 1</h3>
+        <h3>10:00 AM – Hearty Breakfast</h3>
         <ul>
-          <li>Greek salad + goat feta (30g) + 1 egg</li>
-          <li>Kirkland multivitamin + D3</li>
+          <li>2 boiled eggs + sautéed spinach + ½ avocado</li>
+          <li>Oats + whey protein + almond milk</li>
         </ul>
       </div>
       <div class="section">
-        <h3>2:30 PM - Workout</h3>
+        <h3>1:00 PM – Lunch</h3>
+        <ul>
+          <li>Greek salad + goat feta (30g) + 1 boiled egg</li>
+        </ul>
+      </div>
+      <div class="section">
+        <h3>2:30 PM – Workout (Pull-Focused)</h3>
         <ul>
           <li>Romanian deadlift</li>
           <li>Dumbbell row</li>
@@ -108,42 +127,48 @@
           <li>Overhead press</li>
           <li>Walking lunges</li>
           <li>Cable crunch</li>
-          <li>Jump rope (5 x 1m)</li>
+          <li>Jump rope (5×1min)</li>
         </ul>
       </div>
       <div class="section">
-        <h3>3:30 PM - Post-Workout</h3>
-        <ul><li>Whey shake + walnuts (10) + 1/2 banana</li></ul>
+        <h3>3:30 PM – Post-Workout Snack</h3>
+        <ul><li>Premier Protein shake or whey + walnuts + banana</li></ul>
       </div>
       <div class="section">
-        <h3>5:30 PM - Dinner & Supplements</h3>
+        <h3>5:30 PM – Dinner & Supplements</h3>
         <ul>
-          <li>Turkey patty + cauliflower mash + green beans</li>
+          <li>Grilled turkey patty + cauliflower mash + green beans</li>
           <li>Orange Naturals Zinc + Vit C</li>
           <li>Cal/Mag/D3 (alternate days)</li>
         </ul>
       </div>
     </div>
 
+    <!-- Day 4 -->
     <div id="day4" class="tab-content">
-      <h2>Day 4 - Thursday (Rest/Mobility at 3:00 PM)</h2>
+      <h2>Day 4 – Thursday (Rest/Mobility @ 3:00 PM)</h2>
       <div class="section">
-        <h3>10:00 AM - Meal 1</h3>
+        <h3>10:00 AM – Hearty Breakfast</h3>
         <ul>
-          <li>Quinoa bowl + chickpeas + tahini + EVOO</li>
-          <li>Kirkland multivitamin + D3</li>
+          <li>Chia pudding + whey protein + almond milk + berries</li>
         </ul>
       </div>
       <div class="section">
-        <h3>3:00 PM - Activity</h3>
-        <ul><li>Stretch or light walk</li></ul>
+        <h3>1:00 PM – Lunch</h3>
+        <ul>
+          <li>Quinoa + chickpeas + cucumber + tahini dressing + EVOO</li>
+        </ul>
       </div>
       <div class="section">
-        <h3>3:30 PM - Snack</h3>
-        <ul><li>2 eggs + spinach + 1/2 avocado + green tea</li></ul>
+        <h3>3:00 PM – Activity</h3>
+        <ul><li>Stretching or light walk</li></ul>
       </div>
       <div class="section">
-        <h3>5:30 PM - Dinner & Supplements</h3>
+        <h3>3:30 PM – Snack</h3>
+        <ul><li>2 eggs + spinach + avocado</li></ul>
+      </div>
+      <div class="section">
+        <h3>5:30 PM – Dinner & Supplements</h3>
         <ul>
           <li>Grilled steak (4 oz) + zucchini + greens</li>
           <li>Orange Naturals Zinc + Vit C</li>
@@ -152,17 +177,24 @@
       </div>
     </div>
 
+    <!-- Day 5 -->
     <div id="day5" class="tab-content">
-      <h2>Day 5 - Friday (Upper Body Pump at 2:30 PM)</h2>
+      <h2>Day 5 – Friday (Upper Body Pump @ 2:30 PM)</h2>
       <div class="section">
-        <h3>10:00 AM - Meal 1</h3>
+        <h3>10:00 AM – Hearty Breakfast</h3>
         <ul>
-          <li>Tuna salad + 1/4 avocado + EVOO</li>
-          <li>Kirkland multivitamin + D3</li>
+          <li>2 boiled eggs + sautéed veggies + avocado</li>
+          <li>Oats + whey + almond butter</li>
         </ul>
       </div>
       <div class="section">
-        <h3>2:30 PM - Workout</h3>
+        <h3>1:00 PM – Lunch</h3>
+        <ul>
+          <li>Tuna salad + greens + EVOO + avocado</li>
+        </ul>
+      </div>
+      <div class="section">
+        <h3>2:30 PM – Workout (Upper Body Pump)</h3>
         <ul>
           <li>Incline bench press</li>
           <li>Chin-ups</li>
@@ -173,38 +205,43 @@
         </ul>
       </div>
       <div class="section">
-        <h3>3:30 PM - Post-Workout</h3>
-        <ul><li>Overnight oats + whey + peanut butter</li></ul>
+        <h3>3:30 PM – Post-Workout Snack</h3>
+        <ul><li>Premier Protein shake or overnight oats + peanut butter</li></ul>
       </div>
       <div class="section">
-        <h3>5:30 PM - Dinner & Supplements</h3>
+        <h3>5:30 PM – Dinner & Supplements</h3>
         <ul>
-          <li>Baked cod (5 oz) + broccoli + sweet potato (1/2 cup)</li>
+          <li>Baked cod + broccoli + sweet potato</li>
           <li>Orange Naturals Zinc + Vit C</li>
           <li>Cal/Mag/D3 (alternate days)</li>
         </ul>
       </div>
     </div>
 
+    <!-- Day 6 -->
     <div id="day6" class="tab-content">
-      <h2>Day 6 - Saturday (Cardio + Core at 2:30 PM)</h2>
+      <h2>Day 6 – Saturday (Cardio + Core @ 2:30 PM)</h2>
       <div class="section">
-        <h3>10:00 AM - Meal 1</h3>
+        <h3>10:00 AM – Hearty Breakfast</h3>
         <ul>
-          <li>Grilled sirloin (5 oz) + arugula + EVOO</li>
-          <li>Kirkland multivitamin + D3</li>
+          <li>2 boiled eggs + sautéed spinach + avocado</li>
+          <li>Chia pudding + whey</li>
         </ul>
       </div>
       <div class="section">
-        <h3>2:30 PM - Workout</h3>
-        <ul><li>Incline walk (20 min) + core circuit (plank, twists, leg raises)</li></ul>
+        <h3>1:00 PM – Lunch</h3>
+        <ul><li>Grilled sirloin (5 oz) + arugula + EVOO</li></ul>
       </div>
       <div class="section">
-        <h3>3:30 PM - Snack</h3>
-        <ul><li>Chia pudding + whey + blueberries + almond milk</li></ul>
+        <h3>2:30 PM – Workout</h3>
+        <ul><li>Incline walk + core circuit</li></ul>
       </div>
       <div class="section">
-        <h3>5:30 PM - Dinner & Supplements</h3>
+        <h3>3:30 PM – Snack</h3>
+        <ul><li>Premier Protein shake or Greek yogurt + nuts</li></ul>
+      </div>
+      <div class="section">
+        <h3>5:30 PM – Dinner & Supplements</h3>
         <ul>
           <li>Stir-fried tofu + cauliflower rice + bok choy</li>
           <li>Orange Naturals Zinc + Vit C</li>
@@ -213,27 +250,29 @@
       </div>
     </div>
 
+    <!-- Day 7 -->
     <div id="day7" class="tab-content">
-      <h2>Day 7 - Sunday (Rest/Mobility at 3:00 PM)</h2>
+      <h2>Day 7 – Sunday (Rest/Mobility @ 3:00 PM)</h2>
       <div class="section">
-        <h3>10:00 AM - Meal 1</h3>
-        <ul>
-          <li>Lentil & kale salad + grilled chicken (5 oz)</li>
-          <li>Kirkland multivitamin + D3</li>
-        </ul>
+        <h3>10:00 AM – Hearty Breakfast</h3>
+        <ul><li>Lentil & kale salad + grilled chicken</li></ul>
       </div>
       <div class="section">
-        <h3>3:00 PM - Activity</h3>
+        <h3>1:00 PM – Lunch</h3>
+        <ul><li>Quinoa bowl + chickpeas + veggies</li></ul>
+      </div>
+      <div class="section">
+        <h3>3:00 PM – Activity</h3>
         <ul><li>Walk or yoga</li></ul>
       </div>
       <div class="section">
-        <h3>3:30 PM - Snack</h3>
+        <h3>3:30 PM – Snack</h3>
         <ul><li>Whey oats + flax + walnuts</li></ul>
       </div>
       <div class="section">
-        <h3>5:30 PM - Dinner & Supplements</h3>
+        <h3>5:30 PM – Dinner & Supplements</h3>
         <ul>
-          <li>Turkey meatballs (4) + eggplant + green beans</li>
+          <li>Turkey meatballs + eggplant + green beans</li>
           <li>Orange Naturals Zinc + Vit C</li>
           <li>Cal/Mag/D3 (alternate days)</li>
         </ul>
@@ -242,10 +281,9 @@
 
   </div>
   <script>
-    const buttons = document.querySelectorAll('.tab-btn');
-    buttons.forEach(btn => {
+    document.querySelectorAll('.tab-btn').forEach(btn => {
       btn.addEventListener('click', () => {
-        buttons.forEach(b => b.classList.remove('active'));
+        document.querySelectorAll('.tab-btn').forEach(b => b.classList.remove('active'));
         document.querySelectorAll('.tab-content').forEach(tc => tc.classList.remove('active'));
         btn.classList.add('active');
         document.getElementById(btn.dataset.target).classList.add('active');
