--- a/index.html
+++ b/index.html
@@ -1,294 +1,240 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="styles/style.css">  
-  <title>Farhad's 16:8 Meal & Workout Planner</title>
-</head>
-<body> 
-  <header>
-    <h1>Farhad's 16:8 Meal & Workout Planner</h1>
-    <p>Feeding Window: 10:00 AM – 6:00 PM | Fasting: 6:00 PM – 10:00 AM</p>
-  </header>
-  <nav>
-    <button class="tab-btn active" data-target="day1">Monday</button>
-    <button class="tab-btn" data-target="day2">Tuesday</button>
-    <button class="tab-btn" data-target="day3">Wednesday</button>
-    <button class="tab-btn" data-target="day4">Thursday</button>
-    <button class="tab-btn" data-target="day5">Friday</button>
-    <button class="tab-btn" data-target="day6">Saturday</button>
-    <button class="tab-btn" data-target="day7">Sunday</button>
-  </nav>
-  <div class="container">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/style.css" />
+    <title>Meal & Workout Plan</title>
+  </head>
+  <body>
+    <h1>Weekly Meal Plan</h1>
+    <section id="meal-plan">
+      <article class="day">
+        <h3>Day 1 (Mon)</h3>
+        <ul>
+          <li>
+            <strong>Breakfast:</strong> Eggs 150 g (≈ 3) + egg whites 100 g;
+            steel‑cut oats 40 g; blueberries 100 g; flaxseed 7 g; avocado 50 g
+          </li>
+          <li>
+            <strong>Lunch:</strong> Grilled chicken 120 g; quinoa 50 g (dry);
+            kale 50 g + spinach 50 g; olive oil 10 g; tomatoes 50 g
+          </li>
+          <li>
+            <strong>Pre‑workout shake:</strong> Whey isolate 30 g; almond milk
+            250 mL; oats 20 g; banana 60 g
+          </li>
+          <li>
+            <strong>Dinner:</strong> Baked salmon 150 g; sweet potato 150 g;
+            broccoli 100 g; olive oil 10 g
+          </li>
+          <li><strong>Optional snack:</strong> Greek yogurt 100 g (0 %)</li>
+        </ul>
+      </article>
 
-    <!-- Day 1 -->
-    <div id="day1" class="tab-content active">
-      <h2>Day 1 – Monday (Workout @ 2:30 PM)</h2>
-      <div class="section">
-        <h3>10:00 AM – Hearty Breakfast</h3>
+      <article class="day">
+        <h3>Day 2 (Tue)</h3>
         <ul>
-          <li>2 boiled eggs + sautéed spinach + ½ avocado</li>
-          <li>Oats (½ cup) + whey (1 scoop) + cinnamon + almond milk</li>
-          <li>Kirkland multivitamin + D3</li>
+          <li>
+            <strong>Breakfast:</strong> Greek yogurt 200 g; raspberries 100 g;
+            chia seeds 10 g; walnuts 15 g; rye toast 40 g + boiled egg
+          </li>
+          <li>
+            <strong>Lunch:</strong> Lean turkey chili (turkey 120 g + lentils
+            60 g dry); salad 100 g + balsamic 10 mL
+          </li>
+          <li><strong>Shake:</strong> Whey 30 g + water 300 mL</li>
+          <li>
+            <strong>Dinner:</strong> Seared trout 150 g; wild rice 50 g (dry);
+            asparagus 100 g; avocado oil 5 g
+          </li>
         </ul>
-      </div>
-      <div class="section">
-        <h3>1:00 PM – Lunch</h3>
-        <ul>
-          <li>Grilled chicken breast (5 oz) + arugula salad + 1 tsp EVOO</li>
-          <li>½ cup cooked quinoa</li>
-        </ul>
-      </div>
-      <div class="section">
-        <h3>2:30 PM – Workout (Full Body Push)</h3>
-        <ul>
-          <li>Incline dumbbell press</li>
-          <li>Push-ups</li>
-          <li>Lat pulldown</li>
-          <li>Cable row</li>
-          <li>Goblet squat</li>
-          <li>Hanging knee raises</li>
-          <li>Sled push (3×20s)</li>
-        </ul>
-      </div>
-      <div class="section">
-        <h3>3:30 PM – Post-Workout Snack</h3>
-        <ul>
-          <li>Premier Protein shake (325 mL) or oats + whey + ½ banana</li>
-        </ul>
-      </div>
-      <div class="section">
-        <h3>5:30 PM – Dinner & Supplements</h3>
-        <ul>
-          <li>Baked salmon (5 oz) + sautéed kale + roasted carrots</li>
-          <li>Orange Naturals Zinc + Vit C</li>
-          <li>Cal/Mag/D3 (alternate days)</li>
-        </ul>
-      </div>
-    </div>
+      </article>
 
-    <!-- Day 2 -->
-    <div id="day2" class="tab-content">
-      <h2>Day 2 – Tuesday (Active Recovery @ 2:30 PM)</h2>
-      <div class="section">
-        <h3>10:00 AM – Hearty Breakfast</h3>
+      <article class="day">
+        <h3>Day 3 (Wed)</h3>
         <ul>
-          <li>Greek yogurt (½ cup) + berries + flaxseed</li>
-          <li>Oats (½ cup) + whey (1 scoop) + almond butter</li>
+          <li>
+            <strong>Breakfast:</strong> Protein‑oat pancakes (oats 40 g + whey
+            20 g + cottage cheese 100 g + egg 1); almond butter 20 g;
+            strawberries 80 g
+          </li>
+          <li>
+            <strong>Lunch:</strong> Tuna 120 g + black beans 70 g dry + corn
+            50 g; veggies; olive oil 10 g + lime
+          </li>
+          <li>
+            <strong>Shake:</strong> Whey 30 g; almond milk 250 mL; mango 70 g
+          </li>
+          <li>
+            <strong>Dinner:</strong> Beef sirloin 150 g; mashed cauliflower
+            150 g; olive oil 10 g
+          </li>
         </ul>
-      </div>
-      <div class="section">
-        <h3>1:00 PM – Lunch</h3>
-        <ul>
-          <li>Extra-lean ground beef stir-fry (5 oz) + bell peppers + bok choy + EVOO</li>
-        </ul>
-      </div>
-      <div class="section">
-        <h3>2:30 PM – Activity</h3>
-        <ul><li>20–30 min brisk walk + mobility flow</li></ul>
-      </div>
-      <div class="section">
-        <h3>3:30 PM – Snack</h3>
-        <ul><li>Greek oats (oats + goat yogurt + whey + flaxseed)</li></ul>
-      </div>
-      <div class="section">
-        <h3>5:30 PM – Dinner & Supplements</h3>
-        <ul>
-          <li>Lentil soup + Brussels sprouts + boiled egg</li>
-          <li>Orange Naturals Zinc + Vit C</li>
-          <li>Cal/Mag/D3 (alternate days)</li>
-        </ul>
-      </div>
-    </div>
+      </article>
 
-    <!-- Day 3 -->
-    <div id="day3" class="tab-content">
-      <h2>Day 3 – Wednesday (Pull Focus @ 2:30 PM)</h2>
-      <div class="section">
-        <h3>10:00 AM – Hearty Breakfast</h3>
+      <article class="day">
+        <h3>Day 4 (Thu)</h3>
         <ul>
-          <li>2 boiled eggs + sautéed spinach + ½ avocado</li>
-          <li>Oats + whey protein + almond milk</li>
+          <li>
+            <strong>Breakfast:</strong> Omelette (eggs 2 + whites 100 g; spinach
+            75 g; feta 30 g) + buckwheat 45 g dry + butter 5 g
+          </li>
+          <li>
+            <strong>Lunch:</strong> Chickpea 90 g + avocado 50 g on whole‑grain
+            wrap 60 g; cucumber/tomato
+          </li>
+          <li><strong>Shake:</strong> Whey 30 g; water; apple 120 g</li>
+          <li>
+            <strong>Dinner:</strong> Cod 160 g + pesto 10 g; carrots 150 g;
+            quinoa 40 g dry
+          </li>
         </ul>
-      </div>
-      <div class="section">
-        <h3>1:00 PM – Lunch</h3>
-        <ul>
-          <li>Greek salad + goat feta (30g) + 1 boiled egg</li>
-        </ul>
-      </div>
-      <div class="section">
-        <h3>2:30 PM – Workout (Pull-Focused)</h3>
-        <ul>
-          <li>Romanian deadlift</li>
-          <li>Dumbbell row</li>
-          <li>DB bench press</li>
-          <li>Overhead press</li>
-          <li>Walking lunges</li>
-          <li>Cable crunch</li>
-          <li>Jump rope (5×1min)</li>
-        </ul>
-      </div>
-      <div class="section">
-        <h3>3:30 PM – Post-Workout Snack</h3>
-        <ul><li>Premier Protein shake or whey + walnuts + banana</li></ul>
-      </div>
-      <div class="section">
-        <h3>5:30 PM – Dinner & Supplements</h3>
-        <ul>
-          <li>Grilled turkey patty + cauliflower mash + green beans</li>
-          <li>Orange Naturals Zinc + Vit C</li>
-          <li>Cal/Mag/D3 (alternate days)</li>
-        </ul>
-      </div>
-    </div>
+      </article>
 
-    <!-- Day 4 -->
-    <div id="day4" class="tab-content">
-      <h2>Day 4 – Thursday (Rest/Mobility @ 3:00 PM)</h2>
-      <div class="section">
-        <h3>10:00 AM – Hearty Breakfast</h3>
+      <article class="day">
+        <h3>Day 5 (Fri)</h3>
         <ul>
-          <li>Chia pudding + whey protein + almond milk + berries</li>
+          <li>
+            <strong>Breakfast:</strong> Overnight oats (oats 40 g + milk 150 mL
+            + whey 15 g + chia 10 g + banana 80 g + peanut butter 15 g)
+          </li>
+          <li>
+            <strong>Lunch:</strong> Chicken thigh 130 g; farro 45 g dry;
+            zucchini 100 g; hummus 40 g; olives 15 g
+          </li>
+          <li>
+            <strong>Shake:</strong> Whey 30 g; almond milk 250 mL; berries 60 g
+          </li>
+          <li>
+            <strong>Dinner:</strong> Turkey meatballs 160 g + marinara 100 g;
+            penne 55 g dry; green beans 100 g
+          </li>
         </ul>
-      </div>
-      <div class="section">
-        <h3>1:00 PM – Lunch</h3>
-        <ul>
-          <li>Quinoa + chickpeas + cucumber + tahini dressing + EVOO</li>
-        </ul>
-      </div>
-      <div class="section">
-        <h3>3:00 PM – Activity</h3>
-        <ul><li>Stretching or light walk</li></ul>
-      </div>
-      <div class="section">
-        <h3>3:30 PM – Snack</h3>
-        <ul><li>2 eggs + spinach + avocado</li></ul>
-      </div>
-      <div class="section">
-        <h3>5:30 PM – Dinner & Supplements</h3>
-        <ul>
-          <li>Grilled steak (4 oz) + zucchini + greens</li>
-          <li>Orange Naturals Zinc + Vit C</li>
-          <li>Cal/Mag/D3 (alternate days)</li>
-        </ul>
-      </div>
-    </div>
+      </article>
 
-    <!-- Day 5 -->
-    <div id="day5" class="tab-content">
-      <h2>Day 5 – Friday (Upper Body Pump @ 2:30 PM)</h2>
-      <div class="section">
-        <h3>10:00 AM – Hearty Breakfast</h3>
+      <article class="day">
+        <h3>Day 6 (Sat)</h3>
         <ul>
-          <li>2 boiled eggs + sautéed veggies + avocado</li>
-          <li>Oats + whey + almond butter</li>
+          <li>
+            <strong>Breakfast:</strong> Smoked salmon 80 g on bagel thin 60 g +
+            cream cheese 20 g; egg whites 150 g; spinach 50 g
+          </li>
+          <li>
+            <strong>Lunch:</strong> Beef stir‑fry (steak 120 g; brown rice 50 g
+            dry; peppers 150 g; soy 15 mL; sesame oil 5 g)
+          </li>
+          <li><strong>Shake:</strong> Whey 30 g; water; pear 80 g</li>
+          <li>
+            <strong>Dinner:</strong> Shrimp 170 g; sweet potato 180 g; broccoli
+            100 g; olive oil 10 g
+          </li>
         </ul>
-      </div>
-      <div class="section">
-        <h3>1:00 PM – Lunch</h3>
-        <ul>
-          <li>Tuna salad + greens + EVOO + avocado</li>
-        </ul>
-      </div>
-      <div class="section">
-        <h3>2:30 PM – Workout (Upper Body Pump)</h3>
-        <ul>
-          <li>Incline bench press</li>
-          <li>Chin-ups</li>
-          <li>Arnold press</li>
-          <li>Dips</li>
-          <li>KB swings</li>
-          <li>Mountain climbers</li>
-        </ul>
-      </div>
-      <div class="section">
-        <h3>3:30 PM – Post-Workout Snack</h3>
-        <ul><li>Premier Protein shake or overnight oats + peanut butter</li></ul>
-      </div>
-      <div class="section">
-        <h3>5:30 PM – Dinner & Supplements</h3>
-        <ul>
-          <li>Baked cod + broccoli + sweet potato</li>
-          <li>Orange Naturals Zinc + Vit C</li>
-          <li>Cal/Mag/D3 (alternate days)</li>
-        </ul>
-      </div>
-    </div>
+      </article>
 
-    <!-- Day 6 -->
-    <div id="day6" class="tab-content">
-      <h2>Day 6 – Saturday (Cardio + Core @ 2:30 PM)</h2>
-      <div class="section">
-        <h3>10:00 AM – Hearty Breakfast</h3>
+      <article class="day">
+        <h3>Day 7 (Sun)</h3>
         <ul>
-          <li>2 boiled eggs + sautéed spinach + avocado</li>
-          <li>Chia pudding + whey</li>
+          <li>
+            <strong>Breakfast:</strong> Veggie scramble (eggs 150 g + whites
+            100 g; mushrooms 80 g; peppers 60 g; onions 30 g); oats 35 g +
+            blueberries 80 g + flaxseed 7 g
+          </li>
+          <li>
+            <strong>Lunch:</strong> Sardines 110 g; quinoa 45 g dry; greens
+            100 g; olive oil 10 g; lemon
+          </li>
+          <li>
+            <strong>Shake:</strong> Whey 30 g; almond milk 250 mL; kiwi 70 g
+          </li>
+          <li>
+            <strong>Dinner:</strong> Chicken breast 150 g; Brussels sprouts
+            150 g; potato 160 g; avocado oil 10 g
+          </li>
         </ul>
-      </div>
-      <div class="section">
-        <h3>1:00 PM – Lunch</h3>
-        <ul><li>Grilled sirloin (5 oz) + arugula + EVOO</li></ul>
-      </div>
-      <div class="section">
-        <h3>2:30 PM – Workout</h3>
-        <ul><li>Incline walk + core circuit</li></ul>
-      </div>
-      <div class="section">
-        <h3>3:30 PM – Snack</h3>
-        <ul><li>Premier Protein shake or Greek yogurt + nuts</li></ul>
-      </div>
-      <div class="section">
-        <h3>5:30 PM – Dinner & Supplements</h3>
-        <ul>
-          <li>Stir-fried tofu + cauliflower rice + bok choy</li>
-          <li>Orange Naturals Zinc + Vit C</li>
-          <li>Cal/Mag/D3 (alternate days)</li>
-        </ul>
-      </div>
-    </div>
+      </article>
+    </section>
 
-    <!-- Day 7 -->
-    <div id="day7" class="tab-content">
-      <h2>Day 7 – Sunday (Rest/Mobility @ 3:00 PM)</h2>
-      <div class="section">
-        <h3>10:00 AM – Hearty Breakfast</h3>
-        <ul><li>Lentil & kale salad + grilled chicken</li></ul>
-      </div>
-      <div class="section">
-        <h3>1:00 PM – Lunch</h3>
-        <ul><li>Quinoa bowl + chickpeas + veggies</li></ul>
-      </div>
-      <div class="section">
-        <h3>3:00 PM – Activity</h3>
-        <ul><li>Walk or yoga</li></ul>
-      </div>
-      <div class="section">
-        <h3>3:30 PM – Snack</h3>
-        <ul><li>Whey oats + flax + walnuts</li></ul>
-      </div>
-      <div class="section">
-        <h3>5:30 PM – Dinner & Supplements</h3>
+    <h1>Workout Routine</h1>
+    <section id="workout-plan">
+      <article class="day">
+        <h3>Monday (Push + Cardio)</h3>
         <ul>
-          <li>Turkey meatballs + eggplant + green beans</li>
-          <li>Orange Naturals Zinc + Vit C</li>
-          <li>Cal/Mag/D3 (alternate days)</li>
+          <li>Bench press 4×8</li>
+          <li>Incline DB press 4×10</li>
+          <li>Overhead press 4×12</li>
+          <li>Cable fly 3×12</li>
+          <li>Triceps rope 3×15</li>
+          <li>30 min treadmill @ 7% incline, 6 km/h</li>
         </ul>
-      </div>
-    </div>
+      </article>
 
-  </div>
-  <script>
-    document.querySelectorAll('.tab-btn').forEach(btn => {
-      btn.addEventListener('click', () => {
-        document.querySelectorAll('.tab-btn').forEach(b => b.classList.remove('active'));
-        document.querySelectorAll('.tab-content').forEach(tc => tc.classList.remove('active'));
-        btn.classList.add('active');
-        document.getElementById(btn.dataset.target).classList.add('active');
-      });
-    });
-  </script>
-</body>
+      <article class="day">
+        <h3>Tuesday (Legs + Core)</h3>
+        <ul>
+          <li>Back squat 5×5</li>
+          <li>Romanian deadlift 4×8</li>
+          <li>Leg press 3×12</li>
+          <li>Calf raise 3×15</li>
+          <li>Core circuit×3: plank 60 s; hanging knees 12; ab‑wheel 10</li>
+        </ul>
+      </article>
+
+      <article class="day">
+        <h3>Wednesday (HIIT + Mobility)</h3>
+        <ul>
+          <li>Row intervals: 10×(1 min hard/1 min easy)</li>
+          <li>Kettlebell swings 4×15</li>
+          <li>Sled pushes 6×20 m</li>
+          <li>30 min mobility/foam‑roll</li>
+        </ul>
+      </article>
+
+      <article class="day">
+        <h3>Thursday (Pull + Cardio)</h3>
+        <ul>
+          <li>Deadlift 4×6</li>
+          <li>Weighted pull‑up 4×10</li>
+          <li>Barbell row 3×12</li>
+          <li>Face‑pull 3×15</li>
+          <li>Biceps curl 3×12</li>
+          <li>30 min elliptical @ 70% HRmax</li>
+        </ul>
+      </article>
+
+      <article class="day">
+        <h3>Friday (Legs Power + Core)</h3>
+        <ul>
+          <li>Front squat 4×6</li>
+          <li>Hip thrust 4×8</li>
+          <li>Bulgarian split squat 3×12</li>
+          <li>Ham curl 3×15</li>
+          <li>
+            Core×3: Russian twist 20; cable wood‑chop 12/side; plank‑ups 12
+          </li>
+        </ul>
+      </article>
+
+      <article class="day">
+        <h3>Saturday (MetCon)</h3>
+        <ul>
+          <li>
+            5‑exercise circuit×5 rounds:<br />
+            ‣ 10 burpees → 15 KB goblet squats → 12 DB push‑press → 250 m row →
+            15 ball slams<br />
+            Rest 2 min between rounds
+          </li>
+          <li>20 min brisk walk</li>
+        </ul>
+      </article>
+
+      <article class="day">
+        <h3>Sunday (LISS + Yoga)</h3>
+        <ul>
+          <li>60 min brisk walk or cycling @ 65% HRmax</li>
+          <li>30 min yoga/stretch</li>
+        </ul>
+      </article>
+    </section>
+  </body>
 </html>
